--- a/mkv/mkv.vcxproj.filters
+++ b/mkv/mkv.vcxproj.filters
@@ -18,8 +18,13 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="sdl_wrap.cpp">
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="sdl_wrap.hpp">
       <Filter>Header Files</Filter>
-    </ClCompile>
+    </ClInclude>
+    <ClInclude Include="mkv_util.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
